--- a/template/quiz2.css
+++ b/template/quiz2.css
@@ -1,6 +1,6 @@
 html body {
 	font-family: 'Helvetica', Arial, sans-serif;
-	color: #111
+	color: #111;
 	background: #E7E7E7;
 }
 
@@ -9,17 +9,17 @@ a {
 }
 
 .content {
-	text-align: center
+	text-align: center;
 	padding: 0 15% 20px;
 }
 
 .content h1 {
 	text-transform: uppercase;
 	font-weight: bold;
-	margin: 20px 0;
+	margin: 20px 0 0 0;
+}
 
-
-content form {
+.content form {
 	padding: 10px;
 	width: 300px;
 	margin: 0 auto;
@@ -27,8 +27,49 @@ content form {
 
 .content form input {
 	width: 100%;
-	// border: 2px solid #107394;
+	border: 2px solid #107394;
 	color: #107394;
 	background: transparent;
-	magrin-bottom: 15px;
+	margin-bottom: 15px;
+}
+
+.mouse-over {
+	background: #BBB;
+	border: thin solid black;
+	margin: 5px 5px 5px 5px;
+}
+
+.click {
+	background: #CCC;
+	border: thin solid black;
+	margin: 5px 5px 5px 5px;
+}
+
+.submit {
+	background: #DDD;
+	border: thin solid black;
+	margin: 5px 5px 5px 5px;
+}
+
+.timeout {
+	background: #DD0;
+	border: thin solid black;
+	margin: 5px 5px 5px 5px;
+}
+
+.ajax-data {
+	background: #FDF3E7;
+	border: thin solid black;
+	margin: 5px 5px 5px 5px;
+}
+
+.output {
+	margin-top: -50px;
+	font-family: Arial sans-serif;
+	color: #009999;
+}
+
+span {
+	color: #009999;
+	font-size: 26px;
 }
